Restructured grid system in Section and Fixed Button alignment

--- a/styles/welcome.css
+++ b/styles/welcome.css
@@ -6,8 +6,10 @@
   background-repeat: no-repeat;
 }
 
-.welcome__start {
-  width: calc(100% + 2rem);
+@media screen and (min-width: 768px) {
+  .welcome__start {
+    width: calc(100% + 2rem);
+  }
 }
 
 %welcome__start__img__element {
